--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -10,7 +10,19 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pojox</title>
+    <title>Pojox - Convert JSON & Schema to Classes in Multiple Languages | Java, JavaScript, Go, Python, Rust</title>
+
+    <meta name="description" content="Pojox helps developers instantly convert JSON or JSON Schema to class files in Java, JavaScript, TypeScript, Go, Python, Rust and more. Features error detection and validation.">
+    <meta name="keywords" content="JSON converter, JSON Schema converter, POJO generator, Java class generator, JavaScript class, Go struct, Python class, Rust struct, code generation, JSON validation, Schema validation, developer tools, JSON to code, Schema to code">
+    <meta name="author" content="Pojox">
+    <meta name="robots" content="index, follow">
+    <meta name="application-name" content="Pojox">
+    <meta name="apple-mobile-web-app-title" content="Pojox">
+    <meta name="theme-color" content="#2ea66e">
+    <link rel="apple-touch-icon" href="@/assets/apple-touch-icon.png">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7226901984485283"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
