start testing ads

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
       rel="stylesheet"
     />
+    <!-- mylead-verification: 5b55eabf45df88e9a80224c2d2d19e00 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pojox - Convert JSON & Schema to Classes in Multiple Languages | Java, JavaScript, Go, Python, Rust</title>
 
@@ -19,10 +20,12 @@
     <meta name="application-name" content="Pojox">
     <meta name="apple-mobile-web-app-title" content="Pojox">
     <meta name="theme-color" content="#2ea66e">
+    <meta name="mylead-verification" content="5b55eabf45df88e9a80224c2d2d19e00">
     <link rel="apple-touch-icon" href="@/assets/apple-touch-icon.png">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7226901984485283"
     crossorigin="anonymous"></script>
+    <script async="async" data-cfasync="false" src="//pl26656223.profitableratecpm.com/ddd8901a15325649dd1789c1832d6fac/invoke.js"></script>
   </head>
   <body>
     <div id="app"></div>
