--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7226901984485283"
     crossorigin="anonymous"></script>
     <script async="async" data-cfasync="false" src="//pl26656223.profitableratecpm.com/ddd8901a15325649dd1789c1832d6fac/invoke.js"></script>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="148692" async data-cfasync="false"></script>
   </head>
   <body>
     <div id="app"></div>
