--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script async="async" data-cfasync="false" src="//pl26656223.profitableratecpm.com/ddd8901a15325649dd1789c1832d6fac/invoke.js"></script>
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="148692" async data-cfasync="false"></script>
   </head>
+   <script src="https://fpyf8.com/88/tag.min.js" data-zone="148692" async data-cfasync="false"></script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
